tests/err01.json.err
Parse error at line 001

001: }
     ^
Expected object, array, number or string
